# i18n-puzzles

./: .gitignore  LICENSE  README.md  build.zig  build.zig.zon  problem1.zig  problem2.zig
python/: main.py  problem10.py  problem11.py  problem12.py  problem13.py  problem14.py  problem15.py  problem16.py  problem17.py  problem18.py  problem19.py  problem3.py  problem4.py  problem6.py  problem7.py  problem8.py  problem9.py  pyproject.toml
src/: main.zig  problem1.zig  problem2.zig  problem3.zig  problem4.zig
zig/: build.zig.zon
zig/src/: main.zig  problem4.zig  problem5.zig
