[project]
name = "i18n-puzzles"
version = "0.1.0"
description = ""
authors = [
    {name = "Dave King",email = "tildedave@gmail.com"}
]
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "pytz (>=2025.1,<2026.0)"
]

[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.poetry]
package-mode = false

[tool.poetry.group.dev.dependencies]
pytest = "^8.3.5"

